# erp

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: Cargo.toml  Dockerfile
backend/src/: config.rs  db.rs  error.rs  main.rs
backend/src/domain/: mod.rs
backend/src/domain/auth/: handlers.rs  models.rs  service.rs
backend/src/domain/bank/: handlers.rs  models.rs  service.rs
backend/src/domain/cash/: handlers.rs  models.rs  service.rs
backend/src/domain/crm/: handlers.rs  models.rs  service.rs
backend/src/domain/finance/: handlers.rs  models.rs  service.rs
backend/src/domain/hr/: handlers.rs  models.rs  service.rs
backend/src/domain/invoice/: handlers.rs  models.rs  service.rs
backend/src/domain/report/: handlers.rs  models.rs  service.rs
backend/src/domain/stock/: handlers.rs  models.rs  service.rs
backend/src/middleware/: audit.rs  auth.rs  logger.rs  mod.rs
frontend/: Dockerfile  jsconfig.json  package-lock.json  package.json
frontend/src/: app.css
frontend/src/lib/: api.js  auth.svelte.js  utils.js
frontend/src/routes/: +layout.js  +layout.svelte  +page.svelte
frontend/src/routes/bank/: +page.svelte
frontend/src/routes/cash/: +page.svelte
frontend/src/routes/crm/: +page.svelte
frontend/src/routes/finance/: +page.svelte
frontend/src/routes/hr/: +page.svelte
frontend/src/routes/invoice/: +page.svelte
frontend/src/routes/login/: +page.svelte
frontend/src/routes/report/: +page.svelte
frontend/src/routes/stock/: +page.svelte
migrations/: 001_initial.sql
