[package]
name = "erp-backend"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "erp-backend"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["macros"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
deadpool-postgres = "0.14"
tokio-postgres = { version = "0.7", features = ["with-serde_json-1", "with-uuid-1", "with-chrono-0_4"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
jsonwebtoken = "9"
sha2 = "0.10"
hex = "0.4"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
thiserror = "2"
lettre = { version = "0.11", features = ["tokio1", "tokio1-native-tls"] }
dotenvy = "0.15"
rand = "0.8"
headers = "0.4"
async-trait = "0.1"
rust-argon2 = "2"
